tests/lean/commandDedent.lean.expected.out
commandDedent.lean:9:0-9:2: error: unexpected identifier; expected command
